# llm-cost-monitor

./: .coderabbit.yaml  .gitignore  Dockerfile  LICENSE  README.md  demo.py  pyproject.toml  pytest.ini  ruff.toml
.github/workflows/: ci.yml
docs/: index.html
llm_cost_monitor/: __init__.py  __main__.py  db.py  pricing.py  server.py  streaming.py
llm_cost_monitor/providers/: __init__.py
llm_cost_monitor/static/: dashboard.html
tests/: conftest.py  test_db.py  test_pricing.py  test_providers.py  test_server.py  test_streaming.py
