[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-cost-monitor"
version = "0.1.0"
description = "Track every dollar your AI spends. Transparent proxy with real-time cost dashboard for any LLM API."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["llm", "cost", "monitoring", "openai", "anthropic", "proxy", "dashboard", "ai", "tokens"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]

dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[project.scripts]
llm-cost-monitor = "llm_cost_monitor.__main__:main"

[project.urls]
Homepage = "https://github.com/rizwan-rizu/llm-cost-monitor"
Repository = "https://github.com/rizwan-rizu/llm-cost-monitor"
Issues = "https://github.com/rizwan-rizu/llm-cost-monitor/issues"

[tool.setuptools.packages.find]
include = ["llm_cost_monitor*"]

[tool.setuptools.package-data]
llm_cost_monitor = ["static/*.html"]
